--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/CharacterAttribute/_CreateTalent.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/CharacterAttribute/_CreateTalent.cshtml
@@ -3,5 +3,6 @@
 @{Layout = null;}
 
 <div class="col-md-12">
+    <h5>List of available talents</h5>
     @{Html.RenderPartial("_SearchAttributes", Model.ListOfAvailableAttributes.ToList());}
 </div>
