--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/Create.cshtml
@@ -7,10 +7,10 @@
     @Styles.Render("~/bundles/playerCss")
     @Styles.Render("~/bundles/Sprite/Attributes")
 }
-<h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
+<h4 class="animated wow fadeInUp" data-wow-delay="0.2s">
     <i class="fa fa-shield animated wow fadeInDown"></i>
     &nbsp;Create Player
-</h3>
+</h4>
 <ul class="process-steps nav nav-justified">
     <li class="active">
         <a href="#step1" data-toggle="tab">
@@ -36,25 +36,31 @@
         </a>
         <p>Items</p>
     </li>
+    <li>
+        <a href="javascript:void(0)" id="btnCreatePlayer">
+            <div class="center-icon"><i class="sprite sprite-Ignore-48 div-icon center-icon"></i></div>
+        </a>
+        <p>Create Player</p>
+    </li>
 </ul>
 <div id="MessageSummary">
     @Html.Partial("_MessageSummary")
 </div>
 <hr />
 <section id="slider" class="fullheight page-player">
-    <div class="tab-content">
+    <div class="tab-content create-player-body">
         <div role="tabpanel" class="tab-pane active" id="step1">
             @Html.Partial("_CreateBasicInformation", Model)
         </div>
 
         <div role="tabpanel" class="tab-pane" id="step2">
-            @{Html.RenderAction("_Create", "CharacterAttribute", new { player = Model.SelectedAttributes });}
+            @{Html.RenderAction("_Create", "CharacterAttribute", new {player = Model.SelectedAttributes});}
         </div>
         <div role="tabpanel" class="tab-pane" id="step3">
-            @{Html.RenderAction("_CreateTalent", "CharacterAttribute", new { player = Model.SelectedAttributes});}
+            @{Html.RenderAction("_CreateTalent", "CharacterAttribute", new {player = Model.SelectedAttributes});}
         </div>
         <div role="tabpanel" class="tab-pane" id="step4">
-            @{Html.RenderAction("_Create", "PlayerItem", new { player = Model.SelectedItems });}
+            @{Html.RenderAction("_Create", "PlayerItem", new {player = Model.SelectedItems});}
         </div>
     </div>
 </section>
@@ -83,9 +89,9 @@
         InitTable('TableAttribute');
         InitTable('table-item-selected');
         InitTable('table-item-available');
-        
-       
-        
+
+        jQuery('.dataTable').wrap('<div class="dataTables_scroll" />');
+
     </script>
 
 
